--- a/client/index.html
+++ b/client/index.html
@@ -1,19 +1,11 @@
+<!DOCTYPE html>
 <html>
-
-<head>
-  <meta charset="utf-8">
-  <title>Redux Easy Boilerplate</title>
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" href="dist/bundle.css"/>
-  <link rel="shortcut icon" type="image/png" href="./src/images/favicon.png"/>
-</head>
-
-<body>
-  <div id="root"></div>
-</body>
-
-<script src="dist/bundle.js"></script>
-<script async defer id="github-bjs" src="https://buttons.github.io/buttons.js"></script>
-
+  <head>
+    <link rel="stylesheet" href="/style/style.css">
+    <link rel="stylesheet" href="https://cdn.rawgit.com/twbs/bootstrap/v4-dev/dist/css/bootstrap.css">
+  </head>
+  <body>
+    <div class="container"></div>
+  </body>
+  <script src="dist/bundle.js"></script>
 </html>
