--- a/client/index.html
+++ b/client/index.html
@@ -2,10 +2,10 @@
 <html>
   <head>
     <title> Storm Braining </title>
-    <link rel="stylesheet" type="text/css" href="dist/bundle.css"/>
+    <link rel="stylesheet" type="text/css" href="/dist/bundle.css"/>
   </head>
   <body>
     <div class="container"></div>
   </body>
-  <script src="dist/bundle.js"></script>
+  <script src="/dist/bundle.js"></script>
 </html>
