--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,7 @@
     <!-- Setting the right viewport -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   </head>
-  <body>`
+  <body>
     <div class="container"></div>
   </body>
     <!-- Auth0Lock script -->
