--- a/client/index.html
+++ b/client/index.html
@@ -11,5 +11,6 @@
   </body>
     <!-- Auth0Lock script -->
   <script src="//cdn.auth0.com/js/lock-9.1.min.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.13.0/moment.min.js"></script>
   <script src="/dist/bundle.js"></script>
 </html>
