(style) Add MUI theme customization template

--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,7 @@
     <!-- Setting the right viewport -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   </head>
-  <body style="background-color: #78909C;">
+  <body style="background-color: #BDBDBD;">
     <div class="container"></div>
   </body>
     <!-- Auth0Lock script -->
